<resources>
    <string name="app_name">Management</string>
    <!--TODO:尽量将一些不要用的词汇进行提出，放到配置文件中，做到易维护-->
    <!--TODO: 检查，删除不要用的配置-->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--<string name="title_activity_bottom_navigation">BottomNavigation</string>-->
    <!--<string name="title_home">Home</string>-->
    <!--<string name="title_dashboard">Dashboard</string>-->
    <!--<string name="title_notifications">Notifications</string>-->
    <!--<string name="appwidget_text">EXAMPLE</string>-->
    <!--<string name="add_widget">Add widget</string>-->
    <!--<string name="title_activity_login">Sign in</string>-->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">姓名</string>
    <string name="prompt_gender">性别</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="prompt_verification">验证码</string>
    <string name="prompt_nickname">昵称</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register">新用户？点击这里注册</string>
    <string name="forget">忘记密码？</string>
    <string name="search">搜索</string>
    <string name="returns">返回</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register_short">注册</string>
    <string name="get_verification">获取验证码</string>
    <string name="error_invalid_account">账号错误</string>
    <string name="error_invalid_password">密码长度不能少于6位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_different_password">两次密码不一致</string>
    <string name="error_field_required">此项必填</string>
    <string name="error_register">注册失败</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="condition_prompt">搜索条件</string>
    <string name="title_activity_world">WorldActivity</string>

    <!--Alphebet for home page-->
    <string name="material_purchase_apply">采购申请</string>
    <string name="material_in_warehouse">材料入库</string>
    <string name="material_turn_back">材料归还</string>
    <string name="material_out_warehouse">材料出库</string>
    <string name="material_information">材料总况</string>
    <string name="material_picking">生产领料</string>
    <!--Alphebet for form-list page-->
    <string name="form_list_table_id">id</string>
    <string name="title">表名</string>
    <string name="digest">内容预览</string>
    <string name="time">创建时间</string>

    <!-- string for form detail-->
    <string name="form_detail_status">状态</string>
    <string name="form_detail_pass">通过</string>
    <string name="form_detail_reject">拒绝</string>
    <string name="form_detail_time">创建时间</string>
    <string name="form_detail_creator">创建者</string>
    <string name="form_detail_table_head_material_name">材料名称</string>
    <string name="form_detail_table_head_material_size">材料规格</string>
    <string name="form_detail_table_head_material_get_number">申请数量</string>
    <!-- string for form create -->
    <string name="form_create_cancel">取消</string>
    <string name="form_create_complete">完成</string>
    <string-array name="search_conditions">
        <item>姓名</item>
        <item>昵称</item>
        <item>手机号码</item>
    </string-array>
    <string-array name="genders">
        <item>男</item>
        <item>女</item>
        <item>其他</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
