<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormCreate">
    <TextView
        android:id="@+id/form_create_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="hello~"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_weight="2"/>
    <android.support.v7.widget.CardView
        android:id="@+id/form_create_basic_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="30dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/lightGray"
        android:layout_margin="5dp"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/form_create_creator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/form_detail_creator"/>
            <TextView
                android:id="@+id/form_create_status"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/form_detail_status"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/form_create_basic_info"
        android:id="@+id/form_create_table_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/table_head_name"
            android:layout_weight="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/form_detail_table_head_material_name"/>
        <TextView
            android:id="@+id/table_head_size"
            android:layout_weight="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/form_detail_table_head_material_size"/>
        <TextView
            android:id="@+id/table_head_operation"
            android:layout_weight="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/form_detail_table_head_material_get_number"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="操作"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/form_create_table_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:orientation="vertical"
        android:layout_weight="15">
        <ListView
            android:id="@+id/form_create_material_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"></ListView>
        <Button
            android:id="@+id/add_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGreen"
            android:text="新增一项"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/verify_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.5"
        >
        <Button
            android:id="@+id/form_create_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/form_create_cancel"
            android:background="@color/yellow"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/form_create_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/form_create_complete"
            />
    </LinearLayout>
</LinearLayout>