<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormList">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/colorWhite"
        android:minHeight="50dp"
        android:maxHeight="590dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:text="@string/form_list_table_id"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1.0"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1.0"
                    android:text="@string/form_detail_creator"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1.0"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/form_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/form_list_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/add"/>
</android.support.constraint.ConstraintLayout>