<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.company.management.LoginActivity"
    android:background="@mipmap/login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:indeterminateTint="@color/colorWhite"
        android:indeterminateTintMode="src_atop"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_form"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:alpha="0.7"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <com.company.management.CircleImageView
                android:id="@+id/imageBox"
                android:layout_marginTop="10dip"
                android:layout_width="75dip"
                android:layout_height="75dip"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@drawable/circle_input" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@drawable/circle_input" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:layout_gravity="right"/>


            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/circle_button" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reset_form"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <EditText
                    android:id="@+id/Rphone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_input"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <EditText
                    android:id="@+id/Rpassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_input"
                    android:hint="新密码"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <EditText
                    android:id="@+id/Rpassword_again"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_input"
                    android:hint="@string/password_again"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <EditText
                    android:id="@+id/Rverification"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_input"
                    android:hint="@string/prompt_verification"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/verification_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/circle_button"
                android:text="@string/get_verification"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Rlogin_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/circle_button"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>